--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -4,15 +4,16 @@ body {
     padding: 0;
 }
 
-nav {
+#nav {
     background-color: #333;
     padding: 1em;
 }
 
-nav a {
+#nav a {
     color: white;
     margin: 0 1em;
     text-decoration: none;
+    display:block;
 }
 
 #content {
