--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="stxt-parser-js">
+        
+    <wb-module deploy-name="aaa-parser-js">
+                
         <wb-resource deploy-path="/" source-path="/WebContent"/>
-        <property name="context-root" value="stxt-parser-js"/>
+        <property name="context-root" value="aaa-parser-js"/>
+            
     </wb-module>
+    
 </project-modules>
