--- a/scss/_01_basic.scss
+++ b/scss/_01_basic.scss
@@ -112,14 +112,16 @@ pre.code {
 /* Alert y assert */
 /* ************** */
 
-.alert p, .assert p {
+.alerta p, .assert p {
 	border: 3px dashed $color2;
 	text-align: center;
 	margin-top: 1em;
 	margin-bottom: 1em;
+	margin-left: 2em;
+	margin-right: 2em;
 	padding: 0.7em;
 }
-.alert p {
+.alerta p {
 	border-color: $color1;
 }
 
