--- a/scss/_01_basic.scss
+++ b/scss/_01_basic.scss
@@ -86,8 +86,8 @@ tt,code {
 	//font-weight: bold;
 	padding-left: 5px;
 	padding-right: 5px;
-	border: 1px solid #d9d9d9;
-	background-color: #f2f2f2;
+	border: 1px solid #aaf;
+	background-color: #ddf;
 	color: #333;
 }
 
@@ -105,6 +105,7 @@ pre.code {
 	strong {
 		color: #3937a3;
 		font-weight: bold;
+		background-color: #ccf;
 	}
 }
 
