--- a/scss/_01_basic.scss
+++ b/scss/_01_basic.scss
@@ -26,6 +26,11 @@ a {
 #top_bar {
 	color: white;
 	background-color: #3937a3;
+	
+	a {
+		color: white;
+		text-decoration: none;
+	}
 }
 
 #main_header {
