--- a/scss/_01_basic.scss
+++ b/scss/_01_basic.scss
@@ -93,7 +93,7 @@ tt,code {
 	padding-right: 5px;
 	border: 1px solid #aaf;
 	background-color: #ddf;
-	color: #333;
+	color: #111;
 }
 
 .copy_button {
@@ -108,9 +108,10 @@ pre.code {
 	border: 1px solid #d9d9d9;
 	
 	strong {
-		color: #3937a3;
-		font-weight: bold;
-		background-color: #ccf;
+		color: #111;
+		border: 1px solid #aaf;
+		background-color: #ddf;
+		font-weight: normal;
 	}
 }
 
